--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "rank-bm25>=0.2.2",
     "rich>=14.1.0",
+    "ruff>=0.12.5",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "tqdm>=4.67.1",
